Adding code changes